# exoclasma-pipe

./: .gitignore  README.md  pyproject.toml
tests/: TestAlign.sh  TestCall.sh  TestFastQC.sh
tests/testdata/: bqsr_table.vcf.gz.tbi  test_unit.json
tests/testdata/testReference/: testReference.bed  testReference.dict  testReference.fa.fai  testReference.info.json
tests/testdata/testReference/capture/testCapture/: testCapture.capture.bed  testCapture.not.capture.bed
tests/testdata/testReference/juicer.rs/: testReference.rs.Arima.txt  testReference.rs.HindIII.txt  testReference.rs.Sau3AI.txt
