[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

[project]
name = "exoclasma-pipe"
version = "0.9.0"
authors = [
	{ name = "Emil Viesná", email="regnveig@yandex.ru" },
	{ name = "Minja Fishman", email="minja-f@yandex.ru" }
]
description = "Exo-C Data Quality Check, Mapping, and Variant Calling, part of ExoClasma Suite"
keywords = ["bioinformatics", "mapping", "variant", "adapters", "calling"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">= 3.10"
dependencies = [
	"pandas"
]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Bio-Informatics",
	"Operating System :: POSIX :: Linux",
	"Natural Language :: English",
	"Development Status :: 3 - Alpha",
	"Environment :: Console"
]

[project.scripts]
exoclasma-pipe = "exoclasma_pipe.exoclasma_pipe:main"

[project.urls]
"Homepage" = "https://github.com/regnveig/exoclasma-pipe"
"Bug Tracker" = "https://github.com/regnveig/exoclasma-pipe/issues"
